Fix the default max year and text color problem in dark mode

--- a/src/components/info-modal/info-modal.component.css
+++ b/src/components/info-modal/info-modal.component.css
@@ -20,6 +20,9 @@
     width: 90%;
     position: relative;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    b {
+        color: black;
+    }
 }
 
 .modal-close {
@@ -74,6 +77,9 @@
         max-height: 90vh;
         overflow-y: auto;
         margin: 1rem;
+        b {
+            color: black;
+        }
     }
 
     .modal-text {
